# s7prtgsensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  s7sensor.json
.github/workflows/: build.yml
cmake/: Findsnap7.cmake
src/: address_parser.cpp  address_parser.hpp  config.cpp  config.hpp  logger.hpp  main.cpp  prtg_output.cpp  prtg_output.hpp  s7client.cpp  s7client.hpp  value_extractor.cpp  value_extractor.hpp
